force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Monthly expense claim record per employee. Aggregates Expense Items and tracks the approval workflow from Draft through Manager/Finance approval to Paid status.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>