force-app/main/default/objects/Expense__c/fields/Advance_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Advance_Adjusted__c</fullName>
    <label>Advance Adjusted</label>
    <type>Currency</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>