force-app/main/default/objects/Expense__c/fields/City_Grade__c.field-meta.xml
<CustomField>
    <fullName>City_Grade__c</fullName>
    <label>City Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Metro</fullName><default>false</default><label>Metro</label></value>
            <value><fullName>City</fullName><default>false</default><label>City</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>