force-app/main/default/objects/Expense__c/fields/DA_Amount__c.field-meta.xml
<CustomField>
    <fullName>DA_Amount__c</fullName>
    <label>DA Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>