force-app/main/default/objects/Expense__c/fields/Day_Activity__c.field-meta.xml
<CustomField>
    <fullName>Day_Activity__c</fullName>
    <label>Day Activity</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Day_Attendance__c</referenceTo>
    <relationshipName>Expense_Day_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>