force-app/main/default/objects/Expense__c/fields/Delay_Submission_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_Submission_Days__c</fullName>
    <label>Delay Submission Days</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>