force-app/main/default/objects/Expense__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(department list)</fullName><default>false</default><label>(department list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>