force-app/main/default/objects/Expense__c/fields/Expense_Config__c.field-meta.xml
<CustomField>
    <fullName>Expense_Config__c</fullName>
    <label>Expense Config</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>DA_Policy__c</referenceTo>
    <relationshipName>Expense_Expense_Config</relationshipName>
    <type>Lookup</type>
</CustomField>