force-app/main/default/objects/Expense__c/fields/Location_HQ__c.field-meta.xml
<CustomField>
    <fullName>Location_HQ__c</fullName>
    <label>Location / HQ</label>
    <length>120</length>
    <type>Text</type>
</CustomField>