force-app/main/default/objects/Expense__c/fields/Other_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense_Amount__c</fullName>
    <label>Other Expense Amount</label>
    <type>Currency</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>