force-app/main/default/objects/Expense__c/fields/Outstation_Type__c.field-meta.xml
<CustomField>
    <fullName>Outstation_Type__c</fullName>
    <label>Outstation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HQ</fullName><default>false</default><label>HQ</label></value>
            <value><fullName>Ex-HQ</fullName><default>false</default><label>Ex-HQ</label></value>
            <value><fullName>Outstation</fullName><default>false</default><label>Outstation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>