force-app/main/default/objects/Expense__c/fields/Pre_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Status__c</fullName>
    <label>Pre-Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Required</fullName><default>false</default><label>Not Required</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>