force-app/main/default/objects/Expense__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(Indian states &amp; UTs)</fullName><default>false</default><label>(Indian states &amp; UTs)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>