force-app/main/default/objects/Expense__c/fields/TA_Amount__c.field-meta.xml
<CustomField>
    <fullName>TA_Amount__c</fullName>
    <label>TA Amount</label>
    <type>Currency</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>