force-app/main/default/objects/Expense__c/fields/TA_Type__c.field-meta.xml
<CustomField>
    <fullName>TA_Type__c</fullName>
    <label>TA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(travel types)</fullName><default>false</default><label>(travel types)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>