force-app/main/default/objects/Expense__c/fields/Travel_Details__c.field-meta.xml
<CustomField>
    <fullName>Travel_Details__c</fullName>
    <label>Travel Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>